--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
+/* -------------------- Remove background color when outofill----------------- */
+input:-webkit-autofill,
+input:-webkit-autofill:hover, 
+input:-webkit-autofill:focus, 
+input:-webkit-autofill:active{
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: #ffffff;
+    box-shadow: inset 0 0 20px 20px transparent;
+}
 /* -------------------- Utility classes -------------------- */
 .cursor-pointer {
   cursor: pointer;
@@ -58,11 +67,13 @@ form .field-name {
   letter-spacing: 0.07rem !important;
   font-weight: 100 !important;
 }
+/*  change shadow of input when fouce */
 .form-control:focus {
   outline: none !important;
   border: none !important;
   box-shadow: 0 0 0.25rem rgba(61, 124, 112, 0.9) !important;
 }
+/*  change shadow of input when fouce */
 
 .submit-btn {
   background-color: #ef9b28 !important;
@@ -129,3 +140,20 @@ form .field-name {
 }
 
 /* --------------------  Pagination Styles -------------------- */
+/* ---------------------  tHead ---------------------*/
+.thead-color {
+  background-color: rgba(49, 89, 81, 0.9) !important;
+}
+/* ---------------------  tHead ---------------------*/
+/* ---------------- Elment and hover -------------------*/
+.links:hover {
+  color: #7ABA78 !important;
+}
+a {
+  color: white !important;
+}
+
+button[type="submit"]:hover {
+  background-color: #FF9800 !important;
+}
+/* -----------------  Elment and hover ------------------------ */
